# hh-vacancies

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml
.github/workflows/: deply.yml
src/: config.py  main.py  models.py  parser.py  redis_client.py  utils.py
src/parser/: hh_parser.py
static/: index.html
tests/: test_main.py  test_utils.py
